--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -11,7 +11,7 @@
         android:layout_width="368dp"
         android:layout_height="247dp"
         android:id="@+id/bgcircle"
-        android:src="@drawable/bgcircle"
+        android:src="@drawable/stopwatch"
         android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="358dp"
         android:layout_height="357dp"
         android:id="@+id/icanchor"
-        android:src="@drawable/icanchor"
+        android:src="@drawable/jarum"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="0dp"
