--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="4dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorAccent"
     >
 
 </androidx.appcompat.widget.Toolbar>
