--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -45,13 +45,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/icanchor"
-        app:layout_constraintVertical_bias="0.060000002" />
+        app:layout_constraintVertical_bias="0.47000003" />
 
     <Button
         android:id="@+id/btnstart"
         android:layout_width="280dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="95dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/bg_button_accent"
@@ -63,7 +64,8 @@
         app:layout_constraintBottom_toTopOf="@+id/btnstop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerhere" />
 
     <Button
         android:id="@+id/btnstop"
