--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="font_black">#000</color>
     <color name="font_hint">#ddd</color>
     <color name="colorcard">#fff</color>
+    <color name="pink">#ffc0cb</color>
+    <color name="indigo">#3964c3</color>
+
 </resources>
