--- a/app/src/main/res/drawable/bg_button_accent.xml
+++ b/app/src/main/res/drawable/bg_button_accent.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="15dp"/>
-    <solid android:color="@android:color/transparent"/>
-    <stroke android:color="#f16c20"
+    <corners android:radius="15dp" />
+    <solid android:color="@android:color/transparent" />
+    <stroke
         android:width="2dp"
-        />
+        android:color="#f16c20" />
 
 
 </shape>
