--- a/app/src/main/res/layout/activity_daily__training.xml
+++ b/app/src/main/res/layout/activity_daily__training.xml
@@ -11,10 +11,10 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         android:gravity="center_vertical|center_horizontal"
         android:text="Name of Exercise"
-        android:textColor="@color/font_black"
+        android:textColor="#fff"
         android:textSize="24sp" />
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
@@ -31,10 +31,11 @@
 
     <ImageView
         android:id="@+id/detail_image"
-        android:layout_width="360dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
         android:layout_centerInParent="true"
         android:src="@drawable/cofitsplash" />
+
 
     <LinearLayout
         android:id="@+id/layout_get_ready"
@@ -49,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="GET READY"
+            android:text="GET RE"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -67,19 +68,19 @@
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btnStart_ex"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="26dp"
         android:text="START"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        app:cornerRadius="2dp"
-        app:shadowColor="@color/colorAccent"
-        app:shadowEnabled="true"
-        app:shadowHeight="2dp" />
+        android:textColor="@color/colorPrimaryDark"
+        app:backgroundTint="#fff"
+        app:strokeColor="@color/colorAccent"
+        app:strokeWidth="1pt" />
 
     <TextView
         android:id="@+id/type"
@@ -87,9 +88,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/timer"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="527dp"
         android:text="Kategori"
-        android:textColor="@color/font_black"
-        android:textSize="50sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="40sp"
         android:textStyle="bold" />
 
     <TextView
