--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -80,18 +80,18 @@
                         android:background="@color/colorcard">
 
                         <ImageView
-                            android:id="@+id/imageView9"
+                            android:id="@+id/img_exercise"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="15dp"
-                            app:srcCompat="@drawable/ic_launcher_background" />
+                            app:srcCompat="@drawable/d_exercise" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/d_exercise"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/imageView9"
+                            android:layout_below="@id/img_exercise"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
                             android:text="Exercise"
@@ -127,18 +127,18 @@
                         android:background="@color/colorcard">
 
                         <ImageView
-                            android:id="@+id/imageView9"
+                            android:id="@+id/img_stopwatch"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="15dp"
-                            app:srcCompat="@drawable/ic_launcher_background" />
+                            app:srcCompat="@drawable/d_stopwatch" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/d_stopwatch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/imageView9"
+                            android:layout_below="@id/img_stopwatch"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
                             android:text="Stopwatch"
@@ -173,21 +173,21 @@
                         android:background="@color/colorcard">
 
                         <ImageView
-                            android:id="@+id/imageView9"
+                            android:id="@+id/img_nearby"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="15dp"
-                            app:srcCompat="@drawable/ic_launcher_background" />
+                            app:srcCompat="@drawable/d_nearby" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/d_nearby"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/imageView9"
+                            android:layout_below="@id/img_nearby"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
-                            android:text="Latihan"
+                            android:text="Nearby"
                             android:textColor="#000000"
                             android:textSize="24sp" />
                     </RelativeLayout>
