--- a/app/src/main/res/layout/activity_list_exercise.xml
+++ b/app/src/main/res/layout/activity_list_exercise.xml
@@ -9,10 +9,10 @@
     <TextView
         android:id="@+id/title"
         android:text="View Exercise"
-        android:textColor="@color/font_black"
+        android:textColor="#FFF"
         android:textSize="24sp"
         android:gravity="center_vertical|center_horizontal"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
