--- a/app/src/main/res/layout/activity_main_exercise.xml
+++ b/app/src/main/res/layout/activity_main_exercise.xml
@@ -8,12 +8,23 @@
     tools:context="com.example.cofit19.MainExercise"
     android:theme="@style/MyMaterialTheme">
 
-    <ImageView
-        android:id="@+id/btnTraining"
+
+    <TextView
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:text="EXERCISES"
+        android:textSize="36sp" />
+
+    <ImageView
+        android:id="@+id/btnTraining"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/phone" />
+        android:src="@drawable/play"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,13 +45,12 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:background="@drawable/bg_button_accent"
                 android:text="Exercise"
-                android:textColor="@color/colorAccent"
-                app:cornerRadius="2dp"
-                app:shadowColor="@color/colorAccent"
-                app:shadowEnabled="true"
-                app:shadowHeight="2dp" />
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                app:backgroundTint="#fff"
+                app:strokeColor="@color/colorAccent"
+                app:strokeWidth="1pt" />
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/btnSetting"
@@ -49,12 +59,12 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:text="Setting"
+                android:text="Settings"
+                android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
-                app:cornerRadius="2dp"
-                app:shadowColor="@color/colorAccent"
-                app:shadowEnabled="true"
-                app:shadowHeight="2dp" />
+                app:backgroundTint="#fff"
+                app:strokeColor="@color/colorAccent"
+                app:strokeWidth="1pt"/>
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -66,12 +76,14 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp"
             android:text="Calendar"
-            android:textColor="@color/colorAccent"
-            app:cornerRadius="2dp"
-            app:shadowColor="@color/colorAccent"
-            app:shadowEnabled="true"
-            app:shadowHeight="2dp" />
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            app:backgroundTint="#fff"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="1pt" />
 
     </LinearLayout>
+
+
 
 </RelativeLayout>
