--- a/app/src/main/res/layout/activity_view_place.xml
+++ b/app/src/main/res/layout/activity_view_place.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bglogin"
     tools:context="com.example.cofit19.ViewPlace">
 
     <RelativeLayout
@@ -19,10 +20,8 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="39dp"
-            android:layout_marginEnd="100dp"
             android:text="Detail Place"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="36sp" />
@@ -49,6 +48,7 @@
                     android:id="@+id/place_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:text="Place Address"
                     android:textSize="20sp"
                     android:textStyle="italic" />
@@ -58,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Place Address"
+                    android:layout_margin="8dp"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
